.github/scripts/tests/fixtures/api-impl-006/pass/swift-api007-precedence/Package.swift
// swift-tools-version: 6.3.1

import PackageDescription

let package = Package(
    name: "swift-api007-precedence",
    targets: [.target(name: "Fixture Module")]
)
