.github/scripts/tests/fixtures/api-impl-006/fail/swift-independent-extension/Package.swift
// swift-tools-version: 6.3.1

import PackageDescription

let package = Package(
    name: "swift-independent-extension",
    targets: [.target(name: "Fixture Module")]
)
